--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "@typescript-eslint/parser": "^6.0.0",
     "autocannon": "^7.15.0",
     "benchmark": "^2.1.4",
-    "clinic": "^12.0.0",
     "cypress": "^13.0.0",
     "eslint": "^8.0.0",
     "jest": "^29.0.0",
@@ -45,7 +44,7 @@
     "prettier": "^3.0.0",
     "ts-jest": "^29.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.0.0"
+    "vitest": "^4.0.16"
   },
   "keywords": [
     "performance",
@@ -74,11 +73,11 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git"
+    "url": "https://github.com/jackulau/StackSleuth.git"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "license": "MIT",
   "engines": {
@@ -86,7 +85,7 @@
   },
   "author": {
     "name": "Jack",
-    "url": "https://github.com/Jack-GitHub12"
+    "url": "https://github.com/jackulau"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.50.0",
@@ -95,9 +94,11 @@
     "cheerio": "^1.1.0",
     "ioredis": "^5.6.1",
     "mysql2": "^3.14.1",
+    "nodemailer": "7.0.12",
     "puppeteer": "^24.10.0",
     "redis": "^5.5.6",
     "svelte": "^5.33.19",
+    "vite": "7.3.0",
     "ws": "^8.18.2"
   }
 }
