--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -14,45 +14,45 @@
     "docker:run": "docker run -p 3000:3000 stacksleuth-api"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "helmet": "^7.0.0",
-    "compression": "^1.7.4",
-    "express-rate-limit": "^6.7.0",
-    "mongoose": "^7.5.0",
-    "redis": "^4.6.7",
-    "jsonwebtoken": "^9.0.1",
     "bcryptjs": "^2.4.3",
-    "winston": "^3.10.0",
+    "bull": "^4.11.3",
+    "compression": "^1.7.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-rate-limit": "^6.7.0",
+    "express-validator": "^7.0.1",
+    "helmet": "^7.0.0",
     "joi": "^17.9.2",
+    "jsonwebtoken": "^9.0.1",
+    "mongoose": "^7.5.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^7.0.12",
+    "prometheus-api-metrics": "^3.2.2",
+    "redis": "^4.6.7",
     "socket.io": "^4.7.2",
-    "nodemailer": "^6.9.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
-    "prometheus-api-metrics": "^3.2.2",
-    "bull": "^4.11.3",
-    "express-validator": "^7.0.1",
-    "multer": "^1.4.5-lts.1"
+    "winston": "^3.10.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17",
-    "@types/cors": "^2.8.13",
-    "@types/compression": "^1.7.2",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/bcryptjs": "^2.4.2",
+    "@types/bull": "^4.10.0",
+    "@types/compression": "^1.7.2",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.9",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
-    "@types/bull": "^4.10.0",
-    "@types/multer": "^1.4.7",
-    "typescript": "^5.0.0",
-    "ts-node": "^10.9.1",
-    "jest": "^29.6.2",
-    "@types/jest": "^29.5.3",
-    "eslint": "^8.44.0",
     "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0"
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.44.0",
+    "jest": "^29.6.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.0"
   },
   "keywords": [
     "performance",
@@ -68,17 +68,17 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/api"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/api#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/api#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
   "license": "MIT",
   "engines": {
