--- a/packages/browser-agent/package.json
+++ b/packages/browser-agent/package.json
@@ -40,37 +40,39 @@
     "@stacksleuth/core": "^0.2.1",
     "axios": "^1.6.0",
     "cheerio": "^1.0.0-rc.12",
+    "nodemailer": "7.0.12",
     "playwright": "^1.40.0",
-    "puppeteer": "^21.0.0",
+    "puppeteer": "^24.34.0",
+    "vite": "7.3.0",
     "ws": "^8.14.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/ws": "^8.5.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@vitest/ui": "^1.6.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^8.0.0",
     "jsdom": "^23.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.6.1"
+    "vitest": "^4.0.16"
   },
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/browser-agent"
   },
   "license": "MIT",
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/browser-agent#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/browser-agent#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "engines": {
     "node": ">=18.0.0"
