--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -13,22 +13,23 @@
   },
   "dependencies": {
     "@stacksleuth/core": "*",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.279.0",
+    "nodemailer": "7.0.12",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.15.0",
     "recharts": "^2.8.0",
-    "lucide-react": "^0.279.0",
-    "clsx": "^2.0.0",
     "tailwind-merge": "^1.14.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^4.0.0",
-    "vite": "^4.4.0",
-    "tailwindcss": "^3.3.0",
     "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "postcss": "^8.4.0",
+    "tailwindcss": "^3.3.0",
+    "vite": "^7.3.0"
   },
   "keywords": [
     "performance",
@@ -44,17 +45,17 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/dashboard"
   },
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/dashboard#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/dashboard#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "license": "MIT",
   "engines": {
