--- a/packages/performance-optimizer/package.json
+++ b/packages/performance-optimizer/package.json
@@ -36,34 +36,35 @@
     "bottlenecks"
   ],
   "dependencies": {
-    "@stacksleuth/core": "^0.2.1"
+    "@stacksleuth/core": "^0.2.1",
+    "nodemailer": "7.0.12",
+    "vite": "7.3.0"
   },
   "devDependencies": {
-    "typescript": "^5.0.0",
-    "jest": "^29.0.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^20.0.0",
+    "benchmark": "^2.1.4",
+    "jest": "^29.0.0",
     "ts-jest": "^29.0.0",
-    "clinic": "^12.0.0",
-    "benchmark": "^2.1.4"
+    "typescript": "^5.0.0"
   },
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/performance-optimizer"
   },
   "license": "MIT",
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/performance-optimizer#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/performance-optimizer#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "engines": {
     "node": ">=18.0.0"
