--- a/packages/session-replay/package.json
+++ b/packages/session-replay/package.json
@@ -33,36 +33,38 @@
     "real-time"
   ],
   "dependencies": {
-    "@stacksleuth/core": "^0.2.1"
+    "@stacksleuth/core": "^0.2.1",
+    "nodemailer": "7.0.12",
+    "puppeteer": "24.34.0",
+    "vite": "7.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@vitest/ui": "^1.6.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "benchmark": "^2.1.4",
-    "clinic": "^12.0.0",
     "eslint": "^8.0.0",
     "jsdom": "^23.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.6.1"
+    "vitest": "^4.0.16"
   },
   "publishConfig": {
     "access": "public"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/session-replay"
   },
   "license": "MIT",
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/session-replay#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/session-replay#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "engines": {
     "node": ">=18.0.0"
