--- a/packages/supabase-agent/package.json
+++ b/packages/supabase-agent/package.json
@@ -34,17 +34,19 @@
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
-    "@supabase/supabase-js": ">=2.0.0"
+    "@supabase/supabase-js": ">=2.0.0",
+    "nodemailer": "7.0.12",
+    "puppeteer": "24.34.0",
+    "vite": "7.3.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@vitest/coverage-v8": "^1.0.0",
-    "@vitest/ui": "^1.6.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "benchmark": "^2.1.4",
-    "clinic": "^12.0.0",
     "eslint": "^8.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.6.1"
+    "vitest": "^4.0.16"
   },
   "peerDependencies": {
     "@supabase/supabase-js": ">=2.0.0"
@@ -54,18 +56,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/supabase-agent"
   },
   "license": "MIT",
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/supabase-agent#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/supabase-agent#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "engines": {
     "node": ">=18.0.0"
