--- a/packages/svelte-agent/package.json
+++ b/packages/svelte-agent/package.json
@@ -37,15 +37,18 @@
   ],
   "dependencies": {
     "@stacksleuth/core": "^0.2.1",
-    "svelte": ">=3.0.0"
+    "nodemailer": "7.0.12",
+    "puppeteer": "24.34.0",
+    "svelte": ">=3.0.0",
+    "vite": "7.3.0"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^1.0.0",
-    "@vitest/ui": "^1.6.1",
+    "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "eslint": "^8.0.0",
     "jsdom": "^23.0.0",
     "typescript": "^5.0.0",
-    "vitest": "^1.6.1"
+    "vitest": "^4.0.16"
   },
   "peerDependencies": {
     "svelte": ">=3.0.0"
@@ -55,18 +58,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth.git",
+    "url": "https://github.com/jackulau/StackSleuth.git",
     "directory": "packages/svelte-agent"
   },
   "license": "MIT",
   "author": {
     "name": "StackSleuth Team",
     "email": "team@stacksleuth.com",
-    "url": "https://github.com/Jack-GitHub12/StackSleuth"
+    "url": "https://github.com/jackulau/StackSleuth"
   },
-  "homepage": "https://github.com/Jack-GitHub12/StackSleuth/tree/main/packages/svelte-agent#readme",
+  "homepage": "https://github.com/jackulau/StackSleuth/tree/main/packages/svelte-agent#readme",
   "bugs": {
-    "url": "https://github.com/Jack-GitHub12/StackSleuth/issues"
+    "url": "https://github.com/jackulau/StackSleuth/issues"
   },
   "engines": {
     "node": ">=18.0.0"
